# swarmpath-agent-bridge-vscode

./: .env.bak  .env.example  .gitignore  README.md  migration-analysis.md  package-lock.json  package.json  tsconfig.json
client/: types.ts
client/components/: ClaudeAgentTerminal.tsx
client/hooks/: useClaudeAgent.ts
docs/: EVOLUTION-ENGINE.md
electron/: icon.icns  loading.html  main.js  preload.js
integration/: next-api-route.ts  next-stream-route.ts
knowledge/: README.md
knowledge/.claude/skills/doc-scraper/: README.md  SKILL.md  _meta.json  pages.example.json
knowledge/.claude/skills/doc-scraper/scripts/: batch_fetch.py  fetch_page.py
knowledge/memory/: CLAUDE.md  DEBATE_RULES.md  IDENTITY.md  KNOWLEDGE.md  SOUL.md  STYLE.md  USER.md
src/: index.ts  server.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/routes/: evolution.routes.ts  knowledge.routes.ts  session.routes.ts  stream.routes.ts
src/services/: background-exec.ts  evolution-engine.ts  lane-queue.ts  sdk-bridge.ts  session-manager.ts
src/utils/: message-transform.ts
web/: index.html
